testsuite/tests/properties/invalid_prop_def/test.out
== correct/test.lkt ==
Code generation was successful

== not_type/test.lkt ==
test.lkt:4:27: error: type expected, got the generic Entity
4 |     @exported fun prop(a: Entity): Int = 0
  |                           ^^^^^^


== reserved/test.lkt ==
test.lkt:4:24: error: Arguments cannot have reserved names (node, bound_env)
4 |     @exported fun prop(node: Int, lex_env: Int): Int = node + lex_env
  |                        ^^^^


lkt_compile: Done
